--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "node scripts/patches/apply-patches.js"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native/new-app-screen": "0.81.1",
+    "axios": "^1.12.2",
     "react": "19.1.0",
     "react-native": "0.81.1",
-    "@react-native/new-app-screen": "0.81.1",
+    "react-native-device-info": "^14.1.1",
+    "react-native-document-picker": "^9.3.1",
     "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
@@ -27,10 +32,12 @@
     "@react-native/metro-config": "0.81.1",
     "@react-native/typescript-config": "0.81.1",
     "@types/jest": "^29.5.13",
+    "@types/node": "^24.5.2",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "patch-package": "^8.0.0",
     "prettier": "2.8.8",
     "react-test-renderer": "19.1.0",
     "typescript": "^5.8.3"
