--- a/package.json
+++ b/package.json
@@ -3,20 +3,27 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android"
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "android:release": "react-native run-android --variant=release",
+    "clean:android": "cd android && gradlew clean",
+    "doctor": "react-native doctor"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-documents/picker": "10.1.7",
+    "@react-native-documents/picker": "^10.1.7",
     "axios": "^1.12.2",
-    "react": "19.1.1",
+    "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-device-info": "14.1.1",
     "react-native-safe-area-context": "5.6.1"
   },
   "devDependencies": {
+    "@babel/core": "latest",
     "@react-native-community/cli": "latest",
-    "@react-native/typescript-config": "0.76.9",
+    "@react-native/babel-preset": "latest",
+    "@react-native/metro-config": "latest",
+    "@react-native/typescript-config": "latest",
     "@types/jest": "^30.0.0",
     "@types/react": "^19.1.13",
     "typescript": "5.9.2"
