--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-device-info": "14.1.1",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-safe-area-context": "5.6.1"
   },
   "devDependencies": {
